src/test/ui/span/dropck_vec_cycle_checked.nll.stderr
error[E0597]: `c1` does not live long enough
  --> $DIR/dropck_vec_cycle_checked.rs:121:24
   |
LL |     c3.v[0].v.set(Some(&c1));
   |                        ^^^ borrowed value does not live long enough
...
LL | }
   | -
   | |
   | borrowed value only lives until here
   | borrow later used here, when `c1` is dropped

error[E0597]: `c2` does not live long enough
  --> $DIR/dropck_vec_cycle_checked.rs:113:24
   |
LL |     c1.v[0].v.set(Some(&c2));
   |                        ^^^ borrowed value does not live long enough
...
LL | }
   | -
   | |
   | borrowed value only lives until here
   | borrow later used here, when `c1` is dropped

error[E0597]: `c3` does not live long enough
  --> $DIR/dropck_vec_cycle_checked.rs:115:24
   |
LL |     c1.v[1].v.set(Some(&c3));
   |                        ^^^ borrowed value does not live long enough
...
LL | }
   | -
   | |
   | borrowed value only lives until here
   | borrow later used here, when `c1` is dropped

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0597`.
